--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^6.8.2"
+    "mongoose": "^6.8.2",
+    "socket.io": "^4.5.4"
   }
 }
