--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "body-parser": "^1.20.1",
     "bootstrap": "^5.3.0-alpha1",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.8",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "mongoose": "^6.8.2",
     "socket.io": "^4.5.4"
