--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "quiz-bee-node-project",
+  "engines": {
+    "node": "16.17.0"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +14,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   },
   "dependencies": {
@@ -20,7 +22,9 @@
     "body-parser": "^1.20.1",
     "bootstrap": "^5.3.0-alpha1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
